--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "doctrine/dbal": "^2.6"
+        "doctrine/dbal": "^2.6",
+        "laracasts/flash": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
